@@ -7,7 +7,6 @@ import org.springframework.data.mongodb.core.mapping.Field;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 @NoArgsConstructor
 @AllArgsConstructor
@@ -27,7 +26,7 @@ public class MongoPassage {
 
         this.paragraphs = passage.getParagraphs().stream()
                 .map(MongoParagraph::new)
-                .collect(Collectors.toList());
+                .toList();
 
         AtomicInteger counter = new AtomicInteger(0);
 
@@ -39,7 +38,7 @@ public class MongoPassage {
 
                     return new MongoQuestionGroup(questionGroup, groupAnswer, start);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Passage toPassage() {
@@ -47,18 +46,18 @@ public class MongoPassage {
                 .articleName(articleTitle)
                 .paragraphs(paragraphs.stream()
                         .map(MongoParagraph::toParagraph)
-                        .collect(Collectors.toList())
+                        .toList()
                 )
                 .questionGroups(questionGroups.stream()
                         .map(MongoQuestionGroup::toQuestionGroup)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 
     public List<String> getAnswer() {
         return questionGroups.stream()
                 .flatMap(mongoQuestionGroup -> mongoQuestionGroup.getAnswer().stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<String> toRecommendationData() {
